fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lead_Owner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Manager_Email__c</fullName>
    <description>set via workflow when an owner is changed from a queue or changed to a new user.</description>
    <label>Lead Owner Manager Email</label>
    <type>Email</type>
</CustomField>