fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lead_Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to record the account that provide the lead.</description>
    <inlineHelpText>This field is used to record the account that provide the lead.</inlineHelpText>
    <label>Lead Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Lead_s</relationshipName>
    <type>Lookup</type>
</CustomField>