fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lead_Source_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Comment__c</fullName>
    <description>Open text field for details on all Lead Sources selected</description>
    <inlineHelpText>Open text field for details on all Lead Sources selected</inlineHelpText>
    <label>Lead Source Comment</label>
    <type>TextArea</type>
</CustomField>