fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Most_Recent__c</fullName>
    <label>Lead Source - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>