fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lead_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_URL__c</fullName>
    <description>Specifies the URL for the lead if the lead is a &quot;web to lead&quot; lead.</description>
    <label>Lead Source URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>