fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lead_Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Taken_By__c</fullName>
    <label>Lead Taken By</label>
    <length>64</length>
    <type>Text</type>
</CustomField>