fullSandbox11072023/force-app/main/default/objects/Lead/fields/Literature__c.field-meta.xml
<CustomField>
    <fullName>Literature__c</fullName>
    <label>Literature</label>
    <type>TextArea</type>
</CustomField>