fullSandbox11072023/force-app/main/default/objects/Lead/fields/Mass_Email_Queue__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email_Queue__c</fullName>
    <label>Mass Email Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>