fullSandbox11072023/force-app/main/default/objects/Lead/fields/Match_Reason__c.field-meta.xml
<CustomField>
    <fullName>Match_Reason__c</fullName>
    <label>Match Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>