fullSandbox11072023/force-app/main/default/objects/Lead/fields/New_Product_Tracking_Filter__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Tracking_Filter__c</fullName>
    <formula>/* Checked True if a New Product Tracking record is related to the opportunity */
NOT(ISBLANK(New_Product_Tracking__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Product Tracking Filter</label>
    <type>Checkbox</type>
</CustomField>