fullSandbox11072023/force-app/main/default/objects/Lead/fields/Notify_of_Future_Webinars__c.field-meta.xml
<CustomField>
    <fullName>Notify_of_Future_Webinars__c</fullName>
    <label>Notify of Future Webinars?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
                <default>true</default>
                <label>YES</label>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>