fullSandbox11072023/force-app/main/default/objects/Lead/fields/OppContactRole__c.field-meta.xml
<CustomField>
    <fullName>OppContactRole__c</fullName>
    <inlineHelpText>Test Help Text</inlineHelpText>
    <label>Opp Contact Role</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>