fullSandbox11072023/force-app/main/default/objects/Lead/fields/Original_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Type_ID__c</fullName>
    <label>Original Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>