fullSandbox11072023/force-app/main/default/objects/Lead/fields/Other_Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Other_Address_Full__c</fullName>
    <formula>If(City != &apos;&apos;, Street + BR() +
City+ &quot;, &quot;+ State + &quot; &quot; + PostalCode, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Address</label>
    <type>Text</type>
</CustomField>