fullSandbox11072023/force-app/main/default/objects/Lead/fields/Other_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Source__c</fullName>
    <description>For all Lead Sources not available in the standard drop down list</description>
    <inlineHelpText>Specify Lead Source</inlineHelpText>
    <label>Other Lead Source</label>
    <length>55</length>
    <type>Text</type>
</CustomField>