fullSandbox11072023/force-app/main/default/objects/Lead/fields/Other_Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Qualified_Reason__c</fullName>
    <description>Field used in Australia Instance.</description>
    <label>Other Qualified Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>