fullSandbox11072023/force-app/main/default/objects/Lead/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Active</label>
    <type>Checkbox</type>
</CustomField>