fullSandbox11072023/force-app/main/default/objects/Lead/fields/Owner_BU__c.field-meta.xml
<CustomField>
    <fullName>Owner_BU__c</fullName>
    <formula>TEXT(Owner:User.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner BU</label>
    <type>Text</type>
</CustomField>