fullSandbox11072023/force-app/main/default/objects/Lead/fields/Owner_Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region_Number__c</fullName>
    <label>Owner Region Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>