fullSandbox11072023/force-app/main/default/objects/Lead/fields/Owner_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Territory_Name__c</fullName>
    <label>Owner Territory Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>