fullSandbox11072023/force-app/main/default/objects/Lead/fields/Physical_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_City__c</fullName>
    <label>Physical Address - Suburb</label>
    <length>50</length>
    <type>Text</type>
</CustomField>