fullSandbox11072023/force-app/main/default/objects/Lead/fields/Physical_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Street__c</fullName>
    <label>Physical Address - Street</label>
    <type>TextArea</type>
</CustomField>