fullSandbox11072023/force-app/main/default/objects/Lead/fields/Physical_Country__c.field-meta.xml
<CustomField>
    <fullName>Physical_Country__c</fullName>
    <label>Physical Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>