fullSandbox11072023/force-app/main/default/objects/Lead/fields/Physical_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Physical_Postal_Code__c</fullName>
    <label>Physical Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>