fullSandbox11072023/force-app/main/default/objects/Lead/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <label>Physical State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>