fullSandbox11072023/force-app/main/default/objects/Lead/fields/Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign__c</fullName>
    <label>Primary Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>