fullSandbox11072023/force-app/main/default/objects/Lead/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Product Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>