fullSandbox11072023/force-app/main/default/objects/Lead/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>The Lead Product Family maps to the Opportunity Product Family.</description>
    <label>Product Family Old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Acute</fullName>
            </value>
            <value>
                <fullName>Aerosol Therapy</fullName>
            </value>
            <value>
                <fullName>Airway</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Arterial</fullName>
                <color>#E27001</color>
                <label>Arterial</label>
            </value>
            <value>
                <fullName>Auto Ligation</fullName>
            </value>
            <value>
                <fullName>Automatization</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Caregiver Safety</fullName>
            </value>
            <value>
                <fullName>Central Venous Access</fullName>
                <color>#0B6FCE</color>
                <label>Central Venous Access</label>
            </value>
            <value>
                <fullName>Chest Drainage</fullName>
            </value>
            <value>
                <fullName>Dialysis Access</fullName>
            </value>
            <value>
                <fullName>Endurance</fullName>
            </value>
            <value>
                <fullName>EZ-IO</fullName>
                <color>#999999</color>
                <label>EZ-IO</label>
            </value>
            <value>
                <fullName>Fascial closure</fullName>
            </value>
            <value>
                <fullName>General Specialties</fullName>
            </value>
            <value>
                <fullName>IAB</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Interventional Procedures</fullName>
            </value>
            <value>
                <fullName>IR JACC</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>LMA</fullName>
            </value>
            <value>
                <fullName>Minilap</fullName>
            </value>
            <value>
                <fullName>OnControl</fullName>
            </value>
            <value>
                <fullName>Other (Third Party)</fullName>
            </value>
            <value>
                <fullName>Oxygen Therapy</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Passive Humidification</fullName>
            </value>
            <value>
                <fullName>Percuvance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>