fullSandbox11072023/force-app/main/default/objects/Lead/fields/Product_Family_GPL__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_GPL__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Family_GPL</valueSetName>
    </valueSet>
</CustomField>