fullSandbox11072023/force-app/main/default/objects/Lead/fields/Product_Family_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Reporting__c</fullName>
    <formula>if(NOT(ISBLANK(TEXT(Product_Family_GPL__c))), TEXT(Product_Family_GPL__c),
if(NOT(ISBLANK(TEXT(Product_Family__c))), TEXT(Product_Family__c),
if(NOT(ISBLANK(TEXT(Product_Family_LatAm__c ))), TEXT(Product_Family_LatAm__c), 
NULL
)))</formula>
    <label>Product Family Reporting</label>
    <type>Text</type>
</CustomField>