fullSandbox11072023/force-app/main/default/objects/Lead/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <description>The Lead Product of Interest is mapped to the Opportunity Product of Interest.</description>
    <label>Product of Interest Old</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1605 Filters</fullName>
            </value>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>3 Lumen PICC</fullName>
            </value>
            <value>
                <fullName>780 Circuit Kits</fullName>
            </value>
            <value>
                <fullName>AC2 Pumps</fullName>
            </value>
            <value>
                <fullName>AC3 Pumps</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Active Humidification</fullName>
            </value>
            <value>
                <fullName>Acute Double Lumen Catheter</fullName>
            </value>
            <value>
                <fullName>Acute Hemodialysis</fullName>
            </value>
            <value>
                <fullName>Acute Hemodialysis AGB+</fullName>
            </value>
            <value>
                <fullName>Acute Triple Lumen Catheter</fullName>
            </value>
            <value>
                <fullName>Adaptors &amp; Connectors</fullName>
            </value>
            <value>
                <fullName>AE-05</fullName>
            </value>
            <value>
                <fullName>AE-10</fullName>
            </value>
            <value>
                <fullName>AE5</fullName>
            </value>
            <value>
                <fullName>Aerosol Therapy</fullName>
            </value>
            <value>
                <fullName>AirTraq (Avant &amp; SP)</fullName>
            </value>
            <value>
                <fullName>AKP1A</fullName>
            </value>
            <value>
                <fullName>Alligator Grasper</fullName>
            </value>
            <value>
                <fullName>Ambit Pump</fullName>
            </value>
            <value>
                <fullName>Appliers</fullName>
            </value>
            <value>
                <fullName>Arrow Midline with Chlorag+ard</fullName>
            </value>
            <value>
                <fullName>Arrow PICC (A5)</fullName>
            </value>
            <value>
                <fullName>Arrow PICC with Chlorag+ard</fullName>
            </value>
            <value>
                <fullName>Atomization</fullName>
            </value>
            <value>
                <fullName>AutoFuser (CPNB &amp; Incisional Sites)</fullName>
            </value>
            <value>
                <fullName>Babcock Grasper</fullName>
            </value>
            <value>
                <fullName>Berci Passer</fullName>
            </value>
            <value>
                <fullName>Berman Catheters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>