fullSandbox11072023/force-app/main/default/objects/Lead/fields/Product_of_Interest_GPL__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest_GPL__c</fullName>
    <label>Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family_GPL__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_of_Interest_GPL</valueSetName>
    </valueSet>
</CustomField>