fullSandbox11072023/force-app/main/default/objects/Lead/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Product Sub Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>