fullSandbox11072023/force-app/main/default/objects/Lead/fields/Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Reason__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Qualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>