fullSandbox11072023/force-app/main/default/objects/Lead/fields/Read_and_Consent_Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Consent_Privacy_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have read and consent to the privacy policy</description>
    <inlineHelpText>I have read and consent to the privacy policy</inlineHelpText>
    <label>Read and Consent Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>